# adventofcode

./: .gitignore
2015/day6/: Cargo.toml  exmain.rs  stats.md
2015/day6/benches/: bench_lights.rs
2015/day6/src/: main.rs
2023/: main.rs
2023/day10/: '
2023/day10/src/: main.part1.rs  main.rs  test4.txt  test5.txt
2023/day11/src/: main.part1.rs  main.rs
2023/day3/src/: main.part1.rs  main.rs
2023/day4/src/: main.rs
2023/day5/src/: main.part1.rs  main.rs
2023/day6/src/: main.rs
2023/day7/src/: main.part1.rs  main.rs  test.txt
2023/day8/src/: main.faster_brute.rs  main.part1.rs  main.rs  test3.txt
2023/day9/src/: main.part1.rs  main.rs
