[package]
name = "day6_2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bencher = "0.1.5"
futures = "0.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_lights"
harness = false
